<resources>
    <string name="app_name">Buky - Books Manager</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <!--For User-->
    <string name="user">User</string>
    <string name="name">Tên</string>
    <string name="email">Email</string>
    <string name="books">Books</string>
    <string name="invoice">Invoice</string>
    <string name="statistics">Statistics</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="userlist">Danh sách người dùng</string>
</resources>
